fix: fixed author names being white in compilations on mobile devices

--- a/app/assets/stylesheets/organisms/content/pieceContent.scss
+++ b/app/assets/stylesheets/organisms/content/pieceContent.scss
@@ -86,7 +86,7 @@
           font-size: calc(#{$baseMobile} * 1.5);
           line-height: 1.33;
           margin-bottom: 0.375em;
-          color: black;
+          color: black !important;
           &:hover {
             text-decoration: none;
           }
